# stanford-cpp-library

./: .gitignore  .gitignore~  Both.pro  BothAll.pro  BothLibraryCompileFlags.pro  BothLibraryWelcome.pro  CMakeLists.txt  NOTES.md  README.md  cp-cpplib-codestepbystep.sh  extract-cpplib.pl  make-StanfordCPPLib_zip.sh  make-autograder_zip.sh  make-docs.sh  make-image-strip.sh  make-stanfordcpplib_zip.sh  pack-autograder-lib-into-single-cpp-file.sh  pack-lib-into-single-cpp-file.sh  spl.cpp  spl.h  spl_cpp_header_autograder_text.txt  spl_cpp_header_text.txt  todo-stanford-cpp-lib.txt  zip-cpplib.sh
Archived/: README.md  extract-cpplib.pl  spl.cpp  spl.h
Archived/Autograder_QtCreatorProject/: Autograder_QtCreatorProject.pro  lateDays.txt
Archived/Karel/: .classpath
Archived/cppdoc/: Edge-class.html  ErrorException-class.html  GBufferedImage-class-old.html  GCheckBox-class.html  GInteractor-class-old.html  GOptionPane-class-old.html  GOptionPane-class.html  GPoint-class-old.html  (+37 more)
Autograder_QtCreatorProject/: Autograder_QtCreatorProject-windows.pro  Autograder_QtCreatorProject.pro
Client/: Client.pro  main.cpp
CompileFlags/: compile.cpp
DebugHelper/: README.md  assign_uses.cpp  bits.cpp  bits.h  fixed_tests  generate_class_coverage.py  generated  main.cpp  manual.cpp  node_pair.cpp  shared.cpp  shared.h  stanford_hash.cpp  stanford_linear.cpp  stanford_pq.cpp  stanford_tree.cpp  stl.cpp
Docs/: ErrorException.html  GPoint.html  Grid.html  GridLocation.html  GridLocationRange.html  HashMap.html  HashSet.html  Lexicon.html  Map.html  PriorityQueue.html  Queue.html  Set.html  Stack.html  Vector.html  _tokenscanner.html  cppdoc.css  direction.html  error.html  filelib.html  gmath.html  index.html  random.html  simpio.html  strlib.html  timer.html
JavaBackEnd/: JBEManifest.txt  Makefile
JavaTaskForce/: Makefile
Karel/: .project
RandomClientTests/BugFixes/: BugFixes.pro  CMakeLists.txt  bigfixes.cpp  bugfixes.cpp
SPL-doc-gen/: Doxyfile  Makefile  README.md  StockDoxyfile  doxyCleanup.py  my.css  myfooter.html  myheader.html  mylayout.xml
SPL-unit-tests/: .gitignore  CMakeLists.txt  README.md  UnitTests.pro  common.h  main.cpp  test-collection-read.cpp  test-collections.cpp  test-console.cpp  test-dawg.cpp  test-deque.cpp  test-error.cpp  test-exceptions.cpp  test-filelib.cpp  test-graphics.cpp  test-grid.cpp  test-hashmap.cpp  test-hashset.cpp  test-lex.cpp  test-linkedlist.cpp  test-map.cpp  test-pqueue.cpp  test-queue.cpp  test-set.cpp  test-simpio.cpp  test-simpletest.cpp  test-sound.cpp  test-stack.cpp  test-strlib.cpp  test-trie.cpp  test-url.cpp  test-vector.cpp  testing
ShadowTest/: main.cpp
SimpleTest/: adtwarmup.cpp  librarybugs.cpp  main.cpp  maze.cpp  maze.h  mazegraphics.cpp  mazegraphics.h  search.cpp  search.h  short_answer.txt  simpletest.cpp  simpletestguide.cpp  testguide.cpp
SimpleTestGuide/: CMakeLists.txt  librarybugs.cpp  main.cpp  simpletest.css  simpletestguide.cpp  unittest.cpp
StanfordCPPLib/: Library.pro  base64.cpp  base64.h  basicgraph.cpp  basicgraph.h  bitstream.cpp  bitstream.h  compare.h  console.cpp  console.h  dawglexicon.cpp  dawglexicon.h  default-goal-install.mk  deque.h  direction.cpp  direction.h  error.cpp  error.h  exceptions.cpp  exceptions.h  filelib.cpp  filelib.h  foreach.h  gbufferedimage.cpp  gbufferedimage.h  gevents.cpp  gevents.h  gfilechooser.cpp  gfilechooser.h  ginteractors.cpp  ginteractors.h  gmath.cpp  gmath.h  gobjects.cpp  gobjects.h  goptionpane.cpp  goptionpane.h  graph.h  grid.h  gtable.cpp  (+56 more)
StanfordCPPLib_CodeStepByStep_Project/: stanfordcpplib-codestepbystep.pro  stanfordcpplib-codestepbystep.pro.user.4.8-pre1
StanfordCPPLib_QtCreatorProject/: stanfordcpplib-experimental.pro  stanfordcpplib-windows.pro  stanfordcpplib.pro  stanfordcpplib.pro.user.4.9-pre1
Welcome/: CMakeLists.txt  Welcome.pro  main.cpp  welcome.cpp
Wizard/: README.md.in  main.cpp.in  wizard.json
_graphics-qt-test/: qwindow.cpp  qwindow.h
autograder/: assertions.cpp  assertions.h  autograder.cpp  autograder.h  autogradercompat.cpp  autogradercompat.h  autogradermainwrapper.cpp  autogradertest.cpp  autogradertest.h  autograderunittestgui.cpp  autograderunittestgui.h  consoleautograder.cpp  consoleautograder.h  date.cpp  date.h  diff.cpp  diff.h  gtest-all.cpp  gtest-marty.cpp  gtest-marty.h  gtest.h  guiautograder.cpp  guiautograder.h  inputpanel.cpp  inputpanel.h  ioutils.cpp  ioutils.h  rapidxml.h  rapidxml_iterators.h  rapidxml_print.h  rapidxml_utils.h  stringutils.cpp  stringutils.h  stylecheck.cpp  stylecheck.h  testresultprinter.cpp  testresultprinter.h  threading.cpp  threading.h  unittestdetails.cpp  (+5 more)
autograder-empty-project/: autograder-empty-project.pro
bugs/: vector_race_condition_ali.txt
cppdoc/: BasicGraph-class.html  CURRENTVERSION_CPPLIB.txt  CURRENTVERSION_SPLJAR.txt  DawgLexicon-class.html  Deque-class.html  Edge-class.html  ErrorException-class.html  G3DRect-class.html  GActionEvent-class-old.html  GActionEvent-class.html  GActionEvent.html  GArc-class.html  GBufferedImage-class.html  GButton-class.html  GCheckBox-class-old.html  GCheckBox-class.html  GChooser-class.html  GCompound-class.html  GDimension-class.html  GEvent-class.html  GImage-class-old.html  GImage-class.html  GInteractor-class.html  GKeyEvent-class.html  GLabel-class.html  GLine-class-old.html  GLine-class.html  GMouseEvent-class.html  GObject-class-old.html  GObject-class.html  GOval-class.html  GPoint-class.html  GPolygon-class.html  GRect-class.html  GRectangle-class.html  GRoundRect-class.html  GSlider-class.html  GTable-class-old.html  GTable-class.html  GText-class.html  (+75 more)
doc/: DoxygenLayout.xml  doxygen.ini
empty-project/: empty-project.pro
local/: todo-stanford-cpp-lib.txt
sample-project/: sample-project.pro
sample-qtcreator-project/: simple-project.pro
simple-project/: simple-project.pro
test_programs/: Makefile  delayed_output  delayed_output.cpp  echo_input  echo_input.cpp  exitcode42  exitcode42.cpp  infinite_loop  infinite_loop.cpp  infinite_output  infinite_output.cpp  make_all.sh  segfault  segfault.cpp
(+4692 files in other folders)
